# clashing

./: .env.example  .firebaserc  .gitignore  FIREBASE_DEPLOYMENT_STATUS.md  FIREBASE_MIGRATION_PLAN.md  README.md  app.py  card_aggregator.py  card_kisses.json  data_store.py  fetch_sample.py  firebase.json  firestore.indexes.json  firestore.rules  justfile  kiss_tracker.py  migrate_cards.py  migrate_player_stats.py  populate_cards.py  pyproject.toml  sample_player_response.json
data/: cards_master.json
functions/: .env.yaml.example  cr_api.py  firestore_store.py  main.py  requirements.txt  roaster.py
public/: cards.html  index.html
templates/: cards.html  index.html
